@@ -6,7 +6,6 @@
 	<script src="src/lib/jquery.js"></script>
 	<script src="src/lib/class.js"></script>
 	<script src="src/lib/iff.js"></script>
-	<script src="src/plugins/querystring.js"></script>
 	<script src="src/plugins/remedial.js"></script>
 	<script src="src/parchment/error-handling.js"></script>
 	<script src="src/parchment/intro.js"></script>
