@@ -1,36 +1,36 @@
 /*
- * Parchment load scripts
- *
- * Copyright (c) 2008-2010 The Parchment Contributors
- * Licenced under the GPL v2
- * http://code.google.com/p/parchment
- */
+
+Parchment load scripts
+======================
+
+Copyright (c) 2008-2011 The Parchment Contributors
+BSD licenced
+http://code.google.com/p/parchment
+
+*/
 (function(window, $){
 
 var parchment = window.parchment;
 
 // Load Parchment, start it all up!
-function load_parchment()
+$(function()
 {
 	// Check for any customised options
-	if (window.parchment_options)
-		$.extend(parchment.options, parchment_options);
-	
-	// Hide the #about, until we can do something more smart with it
-	$('#about').remove();
+	if ( window.parchment_options )
+	{
+		$.extend( parchment.options, parchment_options );
+	}
 	
 	// Load the library
 	var library = new parchment.lib.Library();
 	parchment.library = library;
 	library.load();
 
-	// Add the Analytics tracker, but only if we're at parchment.googlecode.com
-	if (location.href.slice(0, 31) == 'http://parchment.googlecode.com')
+	// Add the Analytics tracker, but only if we're at iplayif.com
+	if ( location.href.indexOf( 'iplayif.com' ) != -1 )
 	{
-		$.getScript('http://www.google-analytics.com/ga.js', function(){_gat._getTracker("UA-7949545-1")._trackPageview();});
+		$.getScript( 'http://google-analytics.com/ga.js', function(){_gat._getTracker( 'UA-7949545-3' )._trackPageview();} );
 	}
-}
+});
 
-$(load_parchment);
-
-})(window, jQuery);
+})( this, jQuery );
